Frontend/src/pages/project/list/List.module.css
.projectenHero {
	margin-bottom: 1.5rem;

	h1,
	h3 {
		margin: 0 0 0.25rem;
	}
}

.filterBar {
	background-color: var(--bg-shift-alt);
	border: 6px solid var(--txt-shift-primary);
	border-radius: 12px;
	padding: 1rem;
	display: flex;
	gap: 1rem;
	margin-bottom: 1.5rem;
}

.searchWrapper {
	display: flex;
	background-color: var(--bg-shift-secondary);
	border: 3px solid var(--border-primary);
	border-radius: 12px;
	overflow: hidden;
	flex: 1;
	min-width: 350px;
	max-height: 80px;
	min-height: 45px;
	align-self: center;
}

.searchIconBox {
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: var(--bg-shift-alt);
	border-right: 3px solid var(--border-primary);
	padding: 0.5rem 0.75rem;
}

.searchIconBox img {
	width: 20px;
	height: 20px;
}

.searchWrapper input {
	border: none;
	background: transparent;
	font-size: 16px;
	font-family: inherit;
	outline: none;
	width: 100%;
	padding: 0.5rem 0.75rem;
}

.searchWrapper input::placeholder {
	font-weight: bold;
	font-size: 18px;
}

.filterButtons {
	display: flex;
	flex-wrap: wrap;
	gap: 0.5rem;
}

:where(.filterButtons) button {
	box-shadow: 5px 5px 0 1px var(--shadow-primary);
}

.filterBtn.active {
	background-color: var(--bg-shift-secondary);
	box-shadow: none;
}

/* grid + counter (filter) text projects (～￣▽￣)～ */

.projectenCount {
	margin: 0 0 1rem;
	font-weight: bold;
}

.projectenGrid {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap: 1.5rem;
	padding-bottom: var(--spacing-s);
	margin-bottom: 10px;
}

@media (max-width: 1024px) {
	.filterBar {
		flex-direction: column;
	}

	.searchWrapper {
		width: 100%;
		min-width: 200px;
		box-sizing: border-box;
	}

	.filterButtons {
		width: 100%;
		display: grid;
		grid-template-columns: 1fr 1fr;
		gap: 0.5rem;
	}

	.filterButtons .filterBtn:first-child {
		grid-column: span 2;
	}

	h1,
	h3 {
		text-align: center;
	}

	.projectenGrid {
		grid-template-columns: 1fr;
	}
}

